--- a/views/widget.jade
+++ b/views/widget.jade
@@ -127,25 +127,32 @@ block content
 
       $scope.widget.generateOutputCode = function(){
         console.log("--> Generating Output Code...");
+
+        var data = {
+          caller_id: $scope.widget.caller_id,
+          sip_uri: $scope.widget.sip_uri,
+          button_label: $scope.widget.button_label,
+          button_style: $scope.widget.button_style,
+          background_style: $scope.widget.background_style,
+          context: $scope.widget.context,
+          dial_pad: $scope.widget.dial_pad,
+          send_digits: $scope.widget.send_digits
+        }
+
+        if ($scope.widget.incompatible_browser_configuration == 'hide_widget') {
+          data['hide_widget'] = true;
+        } else if ($scope.widget.incompatible_browser_configuration == 'link_button_to_a_page')
+          data['link_button_to_a_page'] =  $scope.widget.link_button_to_a_page_value;
+        else if ($scope.widget.incompatible_browser_configuration == 'show_text_html')
+          data['show_text_html'] =  $scope.widget.show_text_html_value;
+
         var req = {
           method: 'POST',
             url: '/voxbone_widget',
             headers: {
               'Content-Type': 'application/json; charset=utf-8'
             },
-            data: {
-              caller_id: $scope.widget.caller_id,
-              sip_uri: $scope.widget.sip_uri,
-              button_label: $scope.widget.button_label,
-              button_style: $scope.widget.button_style,
-              background_style: $scope.widget.background_style,
-              context: $scope.widget.context,
-              dial_pad: $scope.widget.dial_pad,
-              send_digits: $scope.widget.send_digits,
-              hide_widget: $scope.widget.hide_widget,
-              link_button_to_a_page: $scope.widget.link_button_to_a_page_value,
-              show_text_html: $scope.widget.show_text_html_value
-            }
+            data: data
           };
 
           $http(req)
@@ -280,16 +287,16 @@ block content
                       .options-wrap.active
                         .form-group
                           label.control-label Hide the widget #[span.badge(data-toggle='tooltip' data-placement="right" title="If the visitor’s browser does not support WebRTC, hide the widget") ?]
-                          input.form-control(type='checkbox' name='hide_widget' ng-model='widget.hide_widget')
+                          input.form-control(type='radio' name='incompatible_browser_configuration' ng-model='widget.incompatible_browser_configuration' value="hide_widget")
                         .form-group
                           label.control-label Link button to a page #[span.badge(data-toggle='tooltip' data-placement="right" title="If the visitor’s browser does not support WebRTC, specify a URL to go to when the button is clicked") ?]
-                          input.form-control(type='checkbox' name='link_button_to_a_page', ng-model="widget.link_button_to_a_page")
+                          input.form-control(type='radio' name='incompatible_browser_configuration' ng-model="widget.incompatible_browser_configuration" value="link_button_to_a_page")
                           input.form-control(http-prefix type="url" name="link_button_to_a_page_value"
-                          ng-model="widget.link_button_to_a_page_value" ng-show="widget.link_button_to_a_page")
+                          ng-model="widget.link_button_to_a_page_value" ng-show="widget.incompatible_browser_configuration == 'link_button_to_a_page'" placeholder="i.e. https://mysite.com")
                         .form-group
                           label.control-label Show text/HTML #[span.badge(data-toggle='tooltip' data-placement="right" title="Instead of showing the button, display the entered HTML ") ?]
-                          input.form-control(type='checkbox' name='show_text_html', ng-model="widget.show_text_html")
-                          input.form-control(type="text" name="show_text_html_value", placeholder="Enter text or HTML" ng-show="widget.show_text_html" ng-model="widget.show_text_html_value")
+                          input.form-control(type='radio' name='incompatible_browser_configuration' ng-model="widget.incompatible_browser_configuration" value="show_text_html")
+                          input.form-control(type="text" name="show_text_html_value", placeholder="Enter text or HTML" ng-show="widget.incompatible_browser_configuration == 'show_text_html'" ng-model="widget.show_text_html_value")
 
           .col-sm-6.right-col
             .section
