--- a/views/widget.jade
+++ b/views/widget.jade
@@ -139,11 +139,12 @@ block content
           send_digits: $scope.widget.send_digits
         }
 
-        if ($scope.widget.incompatible_browser_configuration == 'hide_widget') {
+        var ibc= $scope.widget.incompatible_browser_configuration;
+        if (ibc == 'hide_widget')
           data['hide_widget'] = true;
-        } else if ($scope.widget.incompatible_browser_configuration == 'link_button_to_a_page')
-          data['link_button_to_a_page'] =  $scope.widget.link_button_to_a_page_value;
-        else if ($scope.widget.incompatible_browser_configuration == 'show_text_html')
+        else if (ibc == 'link_button_to_a_page')
+          data['link_button_to_a_page'] = $scope.widget.link_button_to_a_page_value;
+        else if (ibc == 'show_text_html')
           data['show_text_html'] =  $scope.widget.show_text_html_value;
 
         var req = {
