[vxb-fixes-10] Text/HTML for "Incompatible Browser Configuration" should be for the page not the widget

--- a/views/voxbone_widget.jade
+++ b/views/voxbone_widget.jade
@@ -117,7 +117,8 @@ html(lang='en', ng-app="voxboneApp")
               else if('#{the_widget.link_button_to_a_page}')
                 $window.open('#{the_widget.link_button_to_a_page}','_blank')
               else if('#{the_widget.show_text_html}') {
-                parent.postMessage("setMessage","*");
+                var message = { action: 'setMessage', text: '#{the_widget.show_text_html}' }
+                parent.postMessage(message,"*");
               }
             } else{
 
