[vxb-fixes-19] Refactoring JS & Merging CSS files

--- a/views/voxbone_widget.jade
+++ b/views/voxbone_widget.jade
@@ -6,7 +6,6 @@ html(lang='en', ng-app="voxboneApp")
 
     link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", rel="stylesheet")
     link(href="/stylesheets/root.css", rel="stylesheet")
-    link(href="/stylesheets/widget.css", rel="stylesheet")
 
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js",type="application/javascript")
     script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js' )
@@ -14,8 +13,6 @@ html(lang='en', ng-app="voxboneApp")
 
     script(src="//webrtc.voxbone.com/js/jssip-0.7.9-vox.js",type="application/javascript")
     script(src="//webrtc.voxbone.com/js/voxbone-0.0.3.js",type="application/javascript")
-
-    script(src="/javascripts/webrtc_voxbone_tools.js",type="application/javascript")
 
     script.
 
@@ -79,6 +76,38 @@ html(lang='en', ng-app="voxboneApp")
           };
 
 
+          $scope.send_voxbone_interaction = function (message){
+            if (!voxbone.WebRTC.rtcSession.isEstablished())
+              return;
+
+            switch(message) {
+              case 'hang_up':
+                voxbone.WebRTC.hangup();
+                break;
+              case 'microphone-mute':
+                if (voxbone.WebRTC.isMuted) {
+                  voxbone.WebRTC.unmute();
+                } else {
+                  voxbone.WebRTC.mute();
+                }
+                break;
+              case '1':
+              case '2':
+              case '3':
+              case '4':
+              case '5':
+              case '6':
+              case '7':
+              case '8':
+              case '9':
+              case '0':
+              case '*':
+              case '#':
+                voxbone.WebRTC.sendDTMF(message);
+                break;
+            }
+          };
+
           $window.addEventListener('message', function(event) {
             //- console.log(event.data);
             var message = event.data;
@@ -86,7 +115,7 @@ html(lang='en', ng-app="voxboneApp")
             if (message.action &&  message.action == 'rate')
               $scope.sendRate(message.data.rate, message.data.comment);
             else
-              send_voxbone_interaction(event.data);
+              $scope.send_voxbone_interaction(event.data);
           });
 
           $scope.sendRate = function (rate, comment) {
