making changes to temporary password

--- a/views/signup.jade
+++ b/views/signup.jade
@@ -31,7 +31,7 @@ block content
             },
             data: {
               email: "#{email}",
-              temporary_password: $scope.account.temppassword,
+              temporary_password: "#{temp_password}",
               password: $scope.account.upassword,
               confirmation: $scope.account.confirmation
             }
@@ -77,12 +77,6 @@ block content
               .form-group
                 label.control-label Email address
                 input.form-control(type="text" id="uemail" name="uemail" ng-model="account.uemail", disabled, value= email, placeHolder= email)
-              .form-group
-                label.control-label Temporary Password
-                input.form-control(type="password", id="temppassword", name="temppassword", ng-model="account.temppassword", required)
-                div(ng-show="create_account.$submitted || create_account.temppassword.$touched")
-                  div(ng-show="create_account.temppassword.$error.required") Temporary password is required
-              hr
               .form-group
                 label.control-label Password
                 input.form-control(type="password", id="upassword", name="upassword", ng-model="account.upassword", required, ng-minlength="8")
