--- a/public/stylesheets/widget.css
+++ b/public/stylesheets/widget.css
@@ -22,6 +22,10 @@ a {
   color: #781e75;
   text-decoration: none;
 }
+.hidden{
+  display: none !important;
+}
+
 
 .vox-widget-wrapper{
   z-index: 10000;
@@ -129,12 +133,55 @@ a {
 
 .vox-widget-wrapper .vw-body .vw-rating .vw-question{
   padding-bottom: 20px;
+  padding-bottom: 8px;
+  font-weight: bold;
 }
-.vox-widget-wrapper .vw-body .vw-rating .vw-message{
-  padding-bottom: 20px;
+.vox-widget-wrapper .vw-body .vw-rating .vw-message {
+  padding: 10px;
+  margin: 0 -15px;
+  background:#ECECEC;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+.vox-widget-wrapper .vw-body .btn-style{
+  display: inline-block;
+  width: 140px;
+  line-height: 34px;
+  border: 1px solid #17a0f3;
+  padding: 0;
+  margin: 10px 0;
+  text-decoration: none;
+  font-size: 14px;
+  text-align: center;
+  font-weight: 700;
+  color: #ffffff;
+  white-space: nowrap;
+  vertical-align: middle;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  background: #19a1f3;
+  background: -webkit-linear-gradient(#19a1f3, #0b85ce);
+  background: -moz-linear-gradient(#19a1f3, #19a1f3);
+  background: -ms-linear-gradient(#19a1f3, #19a1f3);
+  background: -o-linear-gradient(#19a1f3, #19a1f3);
+  background: linear-gradient(#19a1f3, #0b85ce);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.16);
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.16);
+  -ms-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.16);
+  -o-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.16);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.16);
+}
+
+.vox-widget-wrapper .vw-body .vw-rating .vw-message  input[type="text"]{
+  margin-top:5px; 
 }
 .vox-widget-wrapper .vw-body .vw-rating .vw-stars{
-  padding-bottom: 20px;
+  padding-bottom: 10px;
 }
 .vox-widget-wrapper .vw-body .vw-rating .vw-button{
 }
@@ -284,6 +331,7 @@ a {
   background-position: right center;
   background-repeat: no-repeat;
 }
+.vw-icon.vx-icon-full-sreen-on,
 .vw-icon.vox-full-screen-on{
   width: 46px;
   height: 46px;
@@ -357,4 +405,21 @@ span:nth-child(2).vw-animated-dots  {
 span:nth-child(3).vw-animated-dots  {
   -webkit-animation-delay: 500ms;
   -moz-animation-delay: 500ms;
+}
+
+
+.vox-widget-wrapper input[type="text"]{
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);  
 }
