--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,8 @@ html(lang='en', ng-app="voxboneApp")
     script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js' )
 
     script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js",type="application/javascript")
+    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-sanitize.min.js",type="application/javascript")
+
     script(src="//cdnjs.cloudflare.com/ajax/libs/raty/2.7.0/jquery.raty.js",type="application/javascript")
     script(src="//cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js",type="application/javascript")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js",type="application/javascript")
