--- a/views/widget.jade
+++ b/views/widget.jade
@@ -50,7 +50,7 @@ block content
       }
     };
 
-    var app = angular.module('voxboneApp', []);
+    var app = angular.module('voxboneApp', ['ngSanitize']);
 
     app.directive('httpPrefix', function() {
       return {
@@ -280,7 +280,7 @@ block content
                           input.form-control(type="text" name="context" ng-model="widget.context")
                         .form-group
                           label(for="btn-context") DTMF Dial Pad #[span.badge(data-toggle='tooltip' data-placement="right" title="Display a dialpad to allow your users to enter DTMF digits during a call.") ?]
-                          input(type="checkbox" name="dial_pad" ng-model="widget.dial_pad")
+                            input(type="checkbox" name="dial_pad" ng-model="widget.dial_pad")
                         .form-group
                           label(for="btn-context") Send Digits #[span.badge(data-toggle='tooltip' data-placement="right" title="Automatically send DTMF digit(s) after a call is connected. This is useful for automatically navigating IVRs or entering access codes for a conference bridge. Digits should use the following format:'1,2,3,1200ms,4,5,900ms,6,#' - This string will  generate 1 2 3, wait 1200 milliseconds, enter 4, 5, wait 900 milliseconds then enter 6, #") ?]
                           input.form-control(type="text" name="send_digits" ng-model="widget.send_digits")
@@ -290,17 +290,16 @@ block content
                     .panel-collapse.collapse#collapseIncompatileBrowserConfiguration
                       .options-wrap.active
                         .form-group
-                          label.control-label Hide the widget #[span.badge(data-toggle='tooltip' data-placement="right" title="If the visitor’s browser does not support WebRTC, hide the widget") ?]
-                          input.form-control(type='radio' name='incompatible_browser_configuration' ng-model='widget.incompatible_browser_configuration' value="hide_widget")
+                          label Hide the widget #[span.badge(data-toggle='tooltip' data-placement="right" title="If the visitor’s browser does not support WebRTC, hide the widget") ?]
+                            input(type='radio' name='incompatible_browser_configuration' ng-model='widget.incompatible_browser_configuration' value="hide_widget")
                         .form-group
-                          label.control-label Link button to a page #[span.badge(data-toggle='tooltip' data-placement="right" title="If the visitor’s browser does not support WebRTC, specify a URL to go to when the button is clicked") ?]
-                          input.form-control(type='radio' name='incompatible_browser_configuration' ng-model="widget.incompatible_browser_configuration" value="link_button_to_a_page")
-                          input.form-control(http-prefix type="url" name="link_button_to_a_page_value"
-                          ng-model="widget.link_button_to_a_page_value" ng-show="widget.incompatible_browser_configuration == 'link_button_to_a_page'" placeholder="i.e. https://mysite.com")
+                          label Link button to a page #[span.badge(data-toggle='tooltip' data-placement="right" title="If the visitor’s browser does not support WebRTC, specify a URL to go to when the button is clicked") ?]
+                            input(type='radio' name='incompatible_browser_configuration' ng-model="widget.incompatible_browser_configuration" value="link_button_to_a_page")
+                          input(http-prefix type="url" name="link_button_to_a_page_value" ng-model="widget.link_button_to_a_page_value" ng-show="widget.incompatible_browser_configuration == 'link_button_to_a_page'" placeholder="i.e. https://mysite.com")
                         .form-group
-                          label.control-label Show text/HTML #[span.badge(data-toggle='tooltip' data-placement="right" title="Instead of showing the button, display the entered HTML ") ?]
-                          input.form-control(type='radio' name='incompatible_browser_configuration' ng-model="widget.incompatible_browser_configuration" value="show_text_html")
-                          textarea.form-control(type="text" name="show_text_html_value", placeholder="Enter text or HTML" ng-show="widget.incompatible_browser_configuration == 'show_text_html'" ng-model="widget.show_text_html_value")
+                          label Show text/HTML #[span.badge(data-toggle='tooltip' data-placement="right" title="Instead of showing the button, display the entered HTML ") ?]
+                            input(type='radio' name='incompatible_browser_configuration' ng-model="widget.incompatible_browser_configuration" value="show_text_html")
+                          textarea(type="text" name="show_text_html_value", placeholder="Enter text or HTML" ng-show="widget.incompatible_browser_configuration == 'show_text_html'" ng-model="widget.show_text_html_value")
 
           .col-sm-6.right-col
             .section
@@ -309,8 +308,7 @@ block content
                 .prev-view.light
                   .widget-box.style-b
                     button.btn-style.mdi-communication-call#launch_call(ng-show="isWebRTCSupported()" ng-click="makeCall()") #[span {{widget.button_label || 'Call Sales'}}]
-                    .not-supported#not-supported-message(ng-show="!isWebRTCSupported()")
-                      !{the_widget.show_text_html}
+                    .not-supported#not-supported-message(ng-show="!isWebRTCSupported()" ng-bind-html="widget.show_text_html_value")
                     .widget-footer-left
                       a(href="https://test.webrtc.org/" target="_blank") Test your setup
                     .widget-footer-right
