[vxb-fixes-21] Updating some wording on Widget.jade

--- a/views/widget.jade
+++ b/views/widget.jade
@@ -242,7 +242,7 @@ block content
         .row
           .col-xs-12
             h1 Create a WebRTC Call Button
-            p #[b Note:] this will create a code widget that can be embedded into any page that allows for JS code and will allow customers to video call without installing any software.
+            p #[b Note:] this will create a code snippet for a click-to-call widget. The widget allows calls to be made without installing any software on browsers that support WebRTC. This snippet code can be embedded into any webpage or Content Management System that supports loading external JavaScript.
     .body(ng-controller="WidgetController")
       .container
         .row
@@ -327,7 +327,7 @@ block content
 
                 .prev-code
                   .title
-                    span Code Widget
+                    span Widget Code Snippet
                       p Paste the following HTML code into your website or give it a try using on
 
                       .btn-code-playground
