--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -50,6 +50,10 @@
       color: @subText;
       margin-bottom: 2px;
     }
+    .label{
+      margin: 0px 5px;
+      display: inline-block;
+    }
   }
   .sub-config{
     .form-group{
