label and radio position fix

--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -18,6 +18,10 @@
       font-size: 13px;
     }
   }
+  .badge{
+    padding: 2px 5px;
+    font-size: 10px;
+  }
   .body{
     width: 100%;
     border-top: 1px solid @border-grey;
@@ -50,9 +54,12 @@
       color: @subText;
       margin-bottom: 2px;
     }
-    .label{
+    .radio-name{
       margin: 0px 5px;
       display: inline-block;
+    }
+    .form-control{
+      margin-top: 8px; 
     }
   }
   .sub-config{
