--- a/public/stylesheets/root.css
+++ b/public/stylesheets/root.css
@@ -126,6 +126,26 @@ a:focus {
   color: #fff;
   font-weight: bold;
 }
+.btn-default.disabled,
+.btn-default.disabled.active,
+.btn-default.disabled.focus,
+.btn-default.disabled:active,
+.btn-default.disabled:focus,
+.btn-default.disabled:hover,
+.btn-default[disabled],
+.btn-default[disabled].active,
+.btn-default[disabled].focus,
+.btn-default[disabled]:active,
+.btn-default[disabled]:focus,
+.btn-default[disabled]:hover,
+fieldset[disabled] .btn-default,
+fieldset[disabled] .btn-default.active,
+fieldset[disabled] .btn-default.focus,
+fieldset[disabled] .btn-default:active,
+fieldset[disabled] .btn-default:focus,
+fieldset[disabled] .btn-default:hover {
+  background: #781e75;
+}
 /* Fonts */
 body,
 h1,
@@ -284,6 +304,11 @@ strong {
 .createButton .header p {
   font-size: 13px;
 }
+.createButton .badge {
+  padding: 2px 5px;
+  font-size: 10px;
+  margin: 0 4px;
+}
 .createButton .body {
   width: 100%;
   border-top: 1px solid #d7dfe1;
@@ -336,6 +361,13 @@ strong {
   display: block;
   color: #58646e;
   margin-bottom: 2px;
+}
+.createButton .boxPanel .radio-name {
+  margin: 0px 5px;
+  display: inline-block;
+}
+.createButton .boxPanel .form-control {
+  margin-top: 8px;
 }
 .createButton .sub-config .form-group {
   margin-bottom: 10px;
@@ -527,7 +559,7 @@ strong {
   min-width: 120px;
   padding: 10px 12px 12px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-  text-shadow: 0px -1px #07619E;
+  text-shadow: 0px -1px #07619e;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -575,7 +607,7 @@ strong {
   min-width: 120px;
   padding: 10px 12px 12px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-  text-shadow: 0px -1px #07619E;
+  text-shadow: 0px -1px #07619e;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -595,24 +627,13 @@ strong {
   -moz-border-radius: 6px;
   border-radius: 6px;
 }
-.widget-box .widget-footer-left {
-  position: absolute;
-  font-size: 9px;
-  bottom: 8px;
-  left: 8px;
-}
-.widget-box .widget-footer-right {
+.widget-box .widget-footer {
   position: absolute;
   font-size: 9px;
   bottom: 8px;
   right: 8px;
 }
-.widget-box .widget-footer-left a {
-  background-size: 60px 12.5px;
-  background-position: left center;
-  background-repeat: no-repeat;
-}
-.widget-box .widget-footer-right a {
+.widget-box .widget-footer a {
   padding-right: 62px;
   background-image: url('../../images/widget-brand.png');
   background-size: 60px 12.5px;
@@ -664,7 +685,7 @@ strong {
   min-width: 120px;
   padding: 10px 12px 12px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-  text-shadow: 0px -1px #07619E;
+  text-shadow: 0px -1px #07619e;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -721,7 +742,7 @@ strong {
   min-width: 120px;
   padding: 10px 12px 12px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-  text-shadow: 0px -1px #07619E;
+  text-shadow: 0px -1px #07619e;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -738,16 +759,16 @@ strong {
 }
 /* Responsive Style */
 /* =================================================================================
-smaller than 1280
+smaller than 1280 
 ================================================================================= */
 /* =================================================================================
-smaller than 1024
+smaller than 1024 
 ================================================================================= */
 /* =================================================================================
-smaller than 760
+smaller than 760 
 ================================================================================= */
 /* =================================================================================
-smaller than 620
+smaller than 620 
 ================================================================================= */
 @media screen and (max-width: 620px) {
   .navbar.navbar span.subBrand {
@@ -765,7 +786,7 @@ smaller than 620
   }
 }
 /* =================================================================================
-smaller than 428
+smaller than 428 
 ================================================================================= */
 @media screen and (max-width: 428px) {
   .registerPage .formWrap {
