--- a/public/stylesheets/less/widget.less
+++ b/public/stylesheets/less/widget.less
@@ -1,24 +1,24 @@
 /*Btn Widget Stuff*/
 .btn-widget(@btn-color){
   display: inline-block;
-  
+
   border: 1px solid darken(@btn-color,0.5%);
   padding: 0;
   margin-right: 10px;
-  
+
   text-decoration: none;
   font-size: 14px;
   text-align: center;
   line-height: 1.4;
   font-weight: 700;
   color: #ffffff;
-  
+
   white-space: nowrap;
   vertical-align: middle;
   touch-action: manipulation;
   cursor: pointer;
   -webkit-user-select: none;
-  
+
   background: @btn-color;
   background: -webkit-linear-gradient(@btn-color,darken(@btn-color,10%));
   background: -moz-linear-gradient(@btn-color,darken(@btn-color,0.10%));
@@ -26,8 +26,8 @@
   background: -o-linear-gradient(@btn-color,darken(@btn-color,0.10%));
   background: linear-gradient(@btn-color,darken(@btn-color,10%));
 
-  .rounded(4px);  
-  
+  .rounded(4px);
+
   -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.16);
   -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.16);
   -ms-box-shadow: 0 1px 1px rgba(0,0,0,0.16);
@@ -37,9 +37,9 @@
     display: block;
     min-width: 120px;
     padding: 10px 12px 12px;
-    border-top:1px solid rgba(255, 255, 255, 0.10); 
+    border-top:1px solid rgba(255, 255, 255, 0.10);
     text-shadow: 0px -1px #07619E;
-    .rounded(4px);  
+    .rounded(4px);
   }
   &:hover{
   background: -webkit-linear-gradient(darken(@btn-color,10%),@btn-color);
@@ -62,7 +62,16 @@
   padding: 70px;
   text-align: center;
   .rounded(6px);
-  .widget-footer{
+  .widget-footer-left{
+    position: absolute;
+    font-size: 9px;
+    bottom: 8px;
+    left: 8px;
+    a{
+      padding-right: 62px;
+    }
+  }
+  .widget-footer-right{
     position: absolute;
     font-size: 9px;
     bottom: 8px;
@@ -86,7 +95,7 @@
     }
     .widget-footer{
       a{
-        color: #8b8b8b;      
+        color: #8b8b8b;
       }
     }
   }
@@ -98,7 +107,7 @@
     }
     .widget-footer{
       a{
-        color: #d8d8d8;        
+        color: #d8d8d8;
       }
     }
   }
