[FIX] Minor wording fix

--- a/views/widget.jade
+++ b/views/widget.jade
@@ -118,7 +118,7 @@ block content
             $window.open($scope.widget.link_button_to_a_page_value,'_blank')
 
         } else{
-          $("#vw-title").text("Calling...");
+          $("#vw-title").text("Calling");
           $(".vw-animated-dots").removeClass('hidden');
           $(".vox-widget-wrapper").removeClass('hidden');
           $("#vw-in-call").removeClass('hidden');
